# RHM-RasHealMonitor

./: CMakeLists.txt  README.md  main.c  stats.py
include/shared/: fan_api.h
src/: fan_api.c  fan_api.h  main.c
